GROW-166 fix page control menu overlaps in-page anchors

--- a/themes/grow-theme/src/css/grow/_wiki.scss
+++ b/themes/grow-theme/src/css/grow/_wiki.scss
@@ -203,6 +203,11 @@
 				tr {
 					text-align: center;
 				}
+
+				[id^="section-"] {
+					padding-top: 42px;
+					margin-top: -18px;
+				}
 	
 				.wiki-actions {
 					position: fixed;
